fix footer spacing

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -49,6 +49,10 @@ a {
   &:hover {
     text-decoration: none;
   }
+
+  &.decorated {
+    text-decoration: underline;
+  }
 }
 
 p {
