--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -76,9 +76,13 @@ ul.inline li {
   display: inline-block;
 }
 
-.social-media a {
-  font-size: 18px;
+.social-media li {
   padding: 0 5px;
+  font-size: 18px;
+
+  &:last-child {
+    padding-right: 0;
+  }
 }
 
 .call-to-action {
