--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -56,13 +56,16 @@
 
 .sidebar {
 
-  .nav-item {
+  .nav-item,
+  footer {
     @include display(flex);
     @include align-items(center);
-    padding: 10px 20px;
+    padding: 0 20px;
+  }
+
+  .nav-item {
     background-color: $teal;
     box-shadow: inset 0 -4px 0 (darken($teal, 10%));
-    text-decoration: none;
 
     a {
       color: $white;
